# Sem2

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  csv_parser.c  csv_parser.h  input.csv  main.c  table_renderer.c  table_renderer.h  test_csv_parser.c
.github/workflows/: main.yml
